added signalr 'hello world'

--- a/MarioPhone/Views/Home/Index.cshtml
+++ b/MarioPhone/Views/Home/Index.cshtml
@@ -3,3 +3,40 @@
 }
 
 <h2>Index</h2>
+
+<div>
+    <input type="text" id="msg" />
+    <input type="button" id="broadcast" value="broadcast" />
+
+    <ul id="messages">
+    </ul>
+</div>
+
+@section scripts
+{
+    <script type="text/javascript">
+        
+        $(function()
+        {
+            // Proxy created on the fly          
+            var chat = $.connection.chat;
+
+            // Declare a function on the chat hub so the server can invoke it          
+            chat.client.addMessage = function(message)
+            {
+                $('#messages').append('<li>' + message + '</li>');
+            };
+
+            // Start the connection
+            $.connection.hub.start().done(function()
+            {
+                $("#broadcast").click(function()
+                {
+                    // Call the chat method on the server
+                    chat.server.send($('#msg').val());
+                });
+            });
+        });
+
+    </script>
+}
