--- a/MarioPhone/Views/Shared/_Layout.cshtml
+++ b/MarioPhone/Views/Shared/_Layout.cshtml
@@ -6,11 +6,14 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/Scripts/jquery.signalR-1.1.2.min.js")
+    @Scripts.Render("~/signalr/hubs")
 </head>
 <body>
     @RenderBody()
 
-    @Scripts.Render("~/bundles/jquery")
+    
     @RenderSection("scripts", required: false)
 </body>
 </html>
