--- a/MarioPhone/Views/Home/Index.cshtml
+++ b/MarioPhone/Views/Home/Index.cshtml
@@ -1,122 +1,153 @@
 ﻿@{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
 <h2>Index</h2>
 
 <div>
-    <input type="text" id="msg" />
-    <input type="button" id="broadcast" value="broadcast" />
-    <input type="button" id="test" onclick="test()" value="test"/>
+	<input type="text" id="msg" />
+	<input type="button" id="broadcast" value="broadcast" />
+	<input type="button" id="test" onclick="test()" value="test"/>
 
-    <ul id="messages">
-    </ul>
+	<ul id="messages">
+	</ul>
 </div>
 
 <iframe id="frame" src="/mariohtml5/main.html" height="550" width="700"></iframe>
 
 @section scripts
 {
-    <script type="text/javascript">
+	<script type="text/javascript">
 
-        var capturing = false;
+		var capturing = false;
 
-        function startCapture() {
-            capturing = true;
-        }
+		function startCapture()
+		{
+			capturing = true;
+		}
 
-        function stopCapture() {
-            capturing = false;
-        }
+		function stopCapture()
+		{
+			capturing = false;
+		}
 
-        function triggerKeyDown(keyCode) {
-            var e = jQuery.Event("keydown");
-            e.which = keyCode;
-            e.keyCode = keyCode;
-            console.log('keydown: ' + keyCode);
-            var frame = $(document.getElementById('frame').contentWindow.document);
-            frame.trigger(e);
-        }
-        
-        function triggerKeyUp(keyCode) {
-            var e = jQuery.Event("keyup");
-            e.which = keyCode;
-            e.keyCode = keyCode;
-            console.log('keyup: ' + keyCode);
-            var frame = $(document.getElementById('frame').contentWindow.document);
-            frame.trigger(e);
-        }
-        
-        function triggerKeyPress(keyCode) {
-            triggerKeyDown(keyCode);
-            setTimeout(function() { triggerKeyUp(keyCode); }, 200);
-        }
+		function triggerKeyDown(keyCode)
+		{
+			var e = jQuery.Event("keydown");
+			e.which = keyCode;
+			e.keyCode = keyCode;
+			console.log('keydown: ' + keyCode);
+			var frame = $(document.getElementById('frame').contentWindow.document);
+			frame.trigger(e);
+		}
 
-        function test() {
-            triggerKeyPress(83);
-        }
+		function triggerKeyUp(keyCode)
+		{
+			var e = jQuery.Event("keyup");
+			e.which = keyCode;
+			e.keyCode = keyCode;
+			console.log('keyup: ' + keyCode);
+			var frame = $(document.getElementById('frame').contentWindow.document);
+			frame.trigger(e);
+		}
 
-        $(function() {
+		function triggerKeyPress(keyCode)
+		{
+			triggerKeyDown(keyCode);
+			setTimeout(function() { triggerKeyUp(keyCode); }, 200);
+		}
 
-            //$(document).keydown(function(e) {
-            //    console.log(e.keyCode);
-            //});
+		function test()
+		{
+			triggerKeyPress(83);
+		}
 
-            // Proxy created on the fly          
-            var chat = $.connection.chat;
+		$(function()
+		{
 
-            var frame = $(document.getElementById('frame').contentWindow.document);
+			//$(document).keydown(function(e) {
+			//    console.log(e.keyCode);
+			//});
 
-            var intervalId;
+			// Proxy created on the fly          
+			var chat = $.connection.chat;
 
-            // Declare a function on the chat hub so the server can invoke it          
-            chat.client.addMessage = function(message) {
-                //$('#messages').append('<li>' + message + '</li>');
-                if (message == 'start') {
-                    triggerKeyPress(83);
-                } else if (message == 'startLeft') {
-                    //clearInterval(intervalId);
-                    //intervalId = setInterval(function() {
-                    //    triggerFrameEvent(37);
-                    //}, 100);
-                    triggerKeyDown(37);
-                } else if (message == 'endLeft') {
-                    //clearInterval(intervalId);
-                    triggerKeyUp(37);
-                } else if (message == 'startRight') {
-                    //clearInterval(intervalId);
-                    //intervalId = setInterval(function() {
-                    //    triggerFrameEvent(39);
-                    //}, 100);
-                    triggerKeyDown(39);
-                } else if (message == 'endRight') {
-                    //clearInterval(intervalId);
-                    triggerKeyUp(39);
-                } else if (message == 'jump') {
-                    //triggerFrameEvent(83);
-                    triggerKeyPress(83);
-                } else if (message == 'enter') {
-                    triggerKeyPress(83);
-                }
+			var frame = $(document.getElementById('frame').contentWindow.document);
 
-            };
+			var intervalId;
 
-            // Start the connection
-            $.connection.hub.start().done(function() {
-                $("#broadcast").click(function() {
-                    // Call the chat method on the server
-                    chat.server.send($('#msg').val());
-                });
-            });
+			// Declare a function on the chat hub so the server can invoke it          
+			chat.client.addMessage = function(message)
+			{
+				//$('#messages').append('<li>' + message + '</li>');
+				if (message == 'start' || message == 'jump' || message == 'enter')
+				{
+					triggerKeyPress(83);
+				}
+				else if (message == 'startLeft')
+				{
+					//clearInterval(intervalId);
+					//intervalId = setInterval(function() {
+					//    triggerFrameEvent(37);
+					//}, 100);
+					triggerKeyDown(37);
+				}
+				else if (message == 'endLeft')
+				{
+					//clearInterval(intervalId);
+					triggerKeyUp(37);
+				}
+				else if (message == 'startRight')
+				{
+					//clearInterval(intervalId);
+					//intervalId = setInterval(function() {
+					//    triggerFrameEvent(39);
+					//}, 100);
+					triggerKeyDown(39);
+				}
+				else if (message == 'endRight')
+				{
+					//clearInterval(intervalId);
+					triggerKeyUp(39);
+				}
+				else if (message == 'startUp')
+				{
+					triggerKeyDown(38);
+				}
+				else if (message == 'endUp')
+				{
+					triggerKeyUp(38);
+				}
+				else if (message == 'startDown')
+				{
+					triggerKeyDown(40);
+				}
+				else if (message == 'endDown')
+				{
+					triggerKeyUp(40);
+				}
+			};
 
-            window.addEventListener('deviceorientation', function(e) {
-                if (capturing) {
-                    chat.server.send('a: ' + e.alpha + ', b: ' + e.beta + ', g: ' + e.gamma);
-                }
-            });
-        });
+			// Start the connection
+			$.connection.hub.start().done(function()
+			{
+				$("#broadcast").click(function()
+				{
+					// Call the chat method on the server
+					chat.server.send($('#msg').val());
+				});
+			});
 
-        (function(a, b) { if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))) window.location = b })(navigator.userAgent || navigator.vendor || window.opera, '/mobile');
+			window.addEventListener('deviceorientation', function(e)
+			{
+				if (capturing)
+				{
+					chat.server.send('a: ' + e.alpha + ', b: ' + e.beta + ', g: ' + e.gamma);
+				}
+			});
+		});
 
-    </script>
+		(function(a, b) { if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))) window.location = b })(navigator.userAgent || navigator.vendor || window.opera, '/mobile');
+
+	</script>
 }
